I've added rol filter in JwtFilter and rol permissons in the SecurityConfig